# aws-iam-analyzer

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
docs/: control-traceability.md  controls.md  demo.md  limitations.md  release.md  scanner-iam-policy.json
docs/adr/: 0001-single-account-scope.md  0002-offline-tests.md  0003-report-sensitivity-and-redaction.md  0004-check-evaluator-boundaries.md
docs/examples/: sample-findings.json
docs/superpowers/plans/: 2026-05-17-aws-iam-analyzer-implementation.md
docs/superpowers/specs/: 2026-05-17-aws-iam-analyzer-design.md
src/iam_analyzer/: __init__.py  logging_config.py
src/iam_analyzer/checks/: __init__.py  catalog.py  common.py  iam.py  logging.py  registry.py
src/iam_analyzer/checks/cloudtrail/: __init__.py  buckets.py  common.py  selectors.py  trails.py
src/iam_analyzer/checks/iam/: __init__.py  cloudshell.py  common.py  credential_report.py  credential_report_source.py  password_policy.py  policy_documents.py  support.py
src/iam_analyzer/cli/: __init__.py  app.py
src/iam_analyzer/models/: __init__.py  finding.py  scan.py  severity.py
src/iam_analyzer/reporter/: __init__.py  json.py  terminal.py
src/iam_analyzer/scanner/: __init__.py  errors.py  orchestrator.py  pagination.py  session.py
tests/: test_baseline.py  test_code_shape.py
tests/checks/: test_iam.py  test_logging.py
tests/cli/: test_app.py
tests/docs/: test_traceability_docs.py
tests/models/: test_finding.py
tests/reporter/: test_json.py  test_terminal.py
tests/scanner/: test_orchestrator.py  test_pagination.py  test_session.py
tools/: code_shape.py
